# Future-Cop-MIT

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Import 3D Models to Blender.md  LICENSE  Paths.md  README.md  Text File.txt  tile_set.json  tile_shade.json
cmake/: FindJSON_CPP.cmake  GenerateVersionHeader.cmake
src/: AnnouncementPlayer.cpp  AnnouncementPlayer.h  Config.h.in  ConfigureInput.cpp  ConfigureInput.h  FCActorFactory.cpp  FCMapViewer.cpp  FCMissionReader.cpp  FCModelViewer.cpp  FCopMIT.cpp  FCopRBGE.cpp  GameState.h  InputMenu.cpp  InputMenu.h  MainMenu.cpp  MainMenu.h  MainProgram.cpp  MainProgram.h  MapSelectorMenu.cpp  MapSelectorMenu.h  MediaPlayer.cpp  MediaPlayer.h  Menu.cpp  Menu.h  ModelViewer.cpp  ModelViewer.h  OptionsMenu.cpp  OptionsMenu.h  ParticleViewer.cpp  ParticleViewer.h  PrimaryGame.cpp  PrimaryGame.h  SoundPlayer.cpp  SoundPlayer.h  SplashScreens.cpp  SplashScreens.h
src/Controls/: CursorInputSet.h  Input.h  InputSet.h  StandardInputSet.h  System.h
src/Controls/SDL2/: CursorInputSet.cpp  CursorInputSet.h  Input.cpp  Input.h  InputSet.cpp  InputSet.h  StandardInputSet.cpp  StandardInputSet.h  System.cpp  System.h
src/Data/: Accessor.cpp  Accessor.h  ActorAccessor.cpp  ActorAccessor.h  Manager.cpp  Manager.h  SWVRAccessor.cpp  SWVRAccessor.h
src/Data/Mission/: ACTManager.cpp  ACTManager.h  ACTResource.cpp  ACTResource.h  AIFFResource.cpp  AIFFResource.h  ANMResource.cpp  ANMResource.h  BMPResource.cpp  BMPResource.h  DCSResource.cpp  DCSResource.h  FUNResource.cpp  FUNResource.h  FontResource.cpp  FontResource.h  IFF.cpp  IFF.h  IFFOptions.cpp  IFFOptions.h  MSICResource.cpp  MSICResource.h  ModelResource.h  NetResource.cpp  NetResource.h  ObjResource.cpp  ObjResource.h  PTCResource.cpp  PTCResource.h  PYRResource.cpp  PYRResource.h  RPNSResource.cpp  RPNSResource.h  Resource.cpp  Resource.h  SHDResource.cpp  SHDResource.h  SNDSResource.cpp  SNDSResource.h  TOSResource.cpp  (+13 more)
src/Data/Mission/ACT/: Aircraft.cpp  Aircraft.h  BaseEntity.cpp  BaseEntity.h  BasePathedEntity.cpp  BasePathedEntity.h  BaseShooter.cpp  BaseShooter.h  BaseShooterEntity.cpp  BaseShooterEntity.h  BaseShooterTurret.cpp  BaseShooterTurret.h  BaseTurret.cpp  BaseTurret.h  DCSQuad.cpp  DCSQuad.h  DynamicProp.cpp  DynamicProp.h  Elevator.cpp  Elevator.h  ItemPickup.cpp  ItemPickup.h  JetCopter.cpp  JetCopter.h  MapObjectiveNodeGroup.cpp  MapObjectiveNodeGroup.h  MovableProp.cpp  MovableProp.h  MoveableProp.cpp  MoveableProp.h  NeutralTurret.cpp  NeutralTurret.h  PathedActor.cpp  PathedActor.h  PathedTurret.cpp  PathedTurret.h  Prop.cpp  Prop.h  SkyCaptain.cpp  SkyCaptain.h  (+15 more)
src/Data/Mission/Embedded/: CBMP.h
src/Data/Mission/Embeded/: PFNT.h
src/Data/Mission/IFF/: State.h
src/Data/Mission/Til/: Colorizer.cpp  Colorizer.h  CullingGenerator.cpp  CullingGenerator.h  Mesh.cpp  Mesh.h  TileSet.cpp  TileSet.h
src/Game/: ActManager.cpp  ActManager.h
src/Game/ACT/: Actor.h  Aircraft.cpp  Aircraft.h  BaseEntity.h  BasePathedEntity.cpp  BasePathedEntity.h  BaseShooter.h  BaseTurret.cpp  BaseTurret.h  DCSQuad.cpp  DCSQuad.h  DynamicProp.cpp  DynamicProp.h  Elevator.cpp  Elevator.h  ItemPickup.cpp  ItemPickup.h  MoveableProp.cpp  MoveableProp.h  NeutralTurret.cpp  NeutralTurret.h  PathedActor.cpp  PathedActor.h  PathedTurret.cpp  PathedTurret.h  Prop.cpp  Prop.h  SkyCaptain.cpp  SkyCaptain.h  StationaryActor.cpp  StationaryActor.h  Turret.cpp  Turret.h  WalkableProp.cpp  WalkableProp.h  X1Alpha.cpp  X1Alpha.h
src/Graphics/: ANMFrame.h  Camera.cpp  Camera.h  Defines.h  ElementInternalData.h  Environment.cpp  Environment.h  ExternalImage.h  Image.h  ImageBase.cpp  ImageBase.h  Manager.h  ModelInstance.cpp  ModelInstance.h  ParticleInstance.cpp  ParticleInstance.h  QuadInstance.h  Text2DBuffer.cpp  Text2DBuffer.h  VideoANM.h  VideoBase.h  Window.cpp  Window.h
src/Graphics/SDL2/: Window.cpp  Window.h
src/Graphics/SDL2/GLES2/: ANMFrame.cpp  ANMFrame.h  Camera.cpp  (+19 more)
src/Sound/: Environment.cpp  Environment.h  Listener.cpp  Listener.h  Location.h  PlayerState.h  Speaker.cpp  Speaker.h  Stream.cpp  Stream.h
src/Sound/Dummy/: Environment.cpp  Environment.h
src/Sound/OpenAL/: Environment.cpp  Environment.h  Listener.cpp  Listener.h  Speaker.cpp  Speaker.h  Stream.cpp  Stream.h
src/Sounds/: Environment.cpp  Environment.h  PlayerState.h
src/Sounds/Dummy/: Environment.cpp  Environment.h
src/Tests/: CMakeLists.txt
src/Tests/Data/Mission/: ANMResource.cpp  CBMPResource.cpp  FontResource.cpp  IFFOptions.cpp  TilResource.cpp
src/Tests/Data/Mission/Embedded/: ANM.h  ANMExpected.h  CBMP.h  CBMPExpected.h  PFNT.h  PFNTExpected.h
src/Tests/Utilities/: Grid2D.cpp  Grid2D.h  GridReg2D.cpp  GridSq2D.cpp  Image2D.cpp  ImagePalette2D.cpp  Logger.cpp  Math.cpp  ModelBuilder.cpp  PixelFormat.cpp  Random.cpp  TestImage2D.h  TestPalette.h
src/Tests/Utilities/Collision/: EPA.cpp  GJK.cpp  GJKPolyhedron.cpp  Helper.h  Plane.cpp  Ray.cpp  Triangle.cpp
src/Tests/Utilities/ImageFormat/: PortableNetworkGraphics.cpp  QuiteOkImage.cpp  QuiteOkayImage.cpp  WindowsBitmap.cpp
src/Tests/Utilities/Options/: Parameters.cpp
src/Utilities/: Buffer.cpp  Buffer.h  DataHandler.cpp  DataHandler.h  DataTypes.cpp  DataTypes.h  Grid2D.h  GridBase2D.h  GridReg2D.h  GridSq2D.h  Image2D.cpp  Image2D.h  ImageData.cpp  ImageData.h  ImagePalette2D.cpp  ImagePalette2D.h  Logger.cpp  Logger.h  Math.cpp  Math.h  ModelBuilder.cpp  ModelBuilder.h  PixelFormat.cpp  PixelFormat.h  QuiteOkImage.cpp  QuiteOkImage.h  Random.cpp  Random.h  Video.cpp  Video.h
src/Utilities/Collision/: GJK.cpp  GJK.h  GJKPolygon.cpp  GJKPolyhedron.cpp  GJKPolyhedron.h  GJKShape.cpp  GJKShape.h  Plane.cpp  Plane.h  Ray.cpp  Ray.h  Triangle.cpp  Triangle.h
src/Utilities/ImageFormat/: Chooser.cpp  Chooser.h  ImageFormat.cpp  ImageFormat.h  PortableNetworkGraphics.cpp  PortableNetworkGraphics.h  QuiteOkImage.cpp  QuiteOkImage.h  WindowsBitmap.cpp  WindowsBitmap.h
src/Utilities/Options/: Configuration.h  Options.cpp  Options.h  Parameters.cpp  Parameters.h  Paths.cpp  Paths.h  Tools.cpp  Tools.h
submodules/: info.txt
(+83 files in other folders)
